Snowfall Animation (Christmas Theme)  add

--- a/about/about.html
+++ b/about/about.html
@@ -11,6 +11,11 @@
 
 <body>
 
+  <!-- =========================
+       Snowfall for Christmas Theme
+  ========================= -->
+  <div id="snow"></div>
+
   <!-- Navbar -->
   <header class="nav">
     <div class="nav-logo">
