--- a/contact/contact.html
+++ b/contact/contact.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
+  <!-- =========================
+       Snowfall for Christmas Theme
+  ========================= -->
+  <div id="snow"></div>
 
   <!-- Navbar -->
   <header class="nav">
