--- a/services/service.html
+++ b/services/service.html
@@ -10,6 +10,11 @@
 </head>
 
 <body>
+
+  <!-- =========================
+       Snowfall for Christmas Theme
+  ========================= -->
+  <div id="snow"></div>
   <!-- Navbar -->
   <header class="nav">
     <div class="nav-logo">
