--- a/home.html
+++ b/home.html
@@ -4,29 +4,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hivexstack Technology</title>
 
-  <title> Hivexstack Technology</title>
+  <!-- Main CSS -->
   <link rel="stylesheet" href="home.css">
+
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
 
+  <!-- =========================
+       Snowfall for Christmas Theme
+  ========================= -->
+  <div id="snow"></div>
 
-  <!-- Navbar -->
+  <!-- =========================
+       Navbar
+  ========================= -->
   <header class="nav">
     <div class="nav-logo">
       <img src="./assets/logo-outline.png" alt="Hivexstack Logo">
     </div>
 
-    <!-- Menu Icon -->
+    <!-- Hamburger Menu Icon -->
     <div class="nav-btn" id="navBtn">
       <i class="fas fa-bars"></i>
     </div>
 
     <nav class="nav-box" id="navBox">
       <!-- Close Button -->
-      <div class="close-btn" id="closeBtn"><i class="fas fa-times"></i></div>
+      <div class="close-btn" id="closeBtn">
+        <i class="fas fa-times"></i>
+      </div>
+
+      <!-- Navigation Links -->
       <ul class="nav-list">
         <li><a href="home.html" class="nav-link">Home</a></li>
         <li><a href="./about/about.html" class="nav-link">About</a></li>
@@ -36,67 +49,56 @@
     </nav>
   </header>
 
-
-
-
-  <div class="hero">
-
-
+  <!-- =========================
+       Hero Section
+  ========================= -->
+  <section class="hero">
     <div class="hero-content">
       <h1>Empowering Your Business with Exceptional Software Solutions</h1>
-      <p>Work with our skilled professionals to create software solutions that drive your business forward</p>
-      <div>
+      <p>Work with our skilled professionals to create software solutions that drive your business forward.</p>
+
+      <!-- Call-to-Action Buttons -->
+      <div class="hero-buttons">
         <a href="./contact/contact.html" class="btn-fill">Get Quotation</a>
         <a href="./contact/contact.html" class="btn-outline">Contact Us</a>
-
       </div>
-
     </div>
-
 
     <div class="hero-overlay">
       <img src="./assets/homebackground1.jpg" alt="Hero Image">
     </div>
-  </div>
+  </section>
 
-
+  <!-- =========================
+       Services Section
+  ========================= -->
   <main class="main">
-
-    <!-- Services Cards -->
     <section class="cards">
+
       <div class="card">
         <i class="fas fa-code"></i>
         <h3>Web</h3>
-        <p>
-          Modern, fast, and <strong>responsive websites</strong> designed to grow your business and improve customer
-          experience.
-        </p>
-
+        <p>Modern, fast, and <strong>responsive websites</strong> designed to grow your business.</p>
       </div>
 
       <div class="card">
         <i class="fas fa-mobile-alt"></i>
         <h3>Mobile</h3>
-        <p>Apps for Android and iOS with smooth design.</p>
+        <p>Apps for Android and iOS with smooth design and performance.</p>
       </div>
 
       <div class="card">
         <i class="fas fa-desktop"></i>
         <h3>Desktop</h3>
-        <p>Custom desktop apps for Windows & Mac.</p>
+        <p>Custom desktop apps for Windows & Mac tailored to your needs.</p>
       </div>
-
-
 
       <div class="card" itemscope itemtype="https://schema.org/Service">
-        <i class="fas fa-chart-line" aria-hidden="true"></i>
+        <i class="fas fa-chart-line"></i>
         <h3 itemprop="name">SEO Services</h3>
-        <p itemprop="description">
-          Improve your website ranking on Google with professional SEO strategies, keyword optimization, and analytics.
-        </p>
+        <p itemprop="description">Improve your website ranking on Google with professional SEO strategies.</p>
         <meta itemprop="serviceType" content="SEO Optimization">
       </div>
-
 
       <div class="card">
         <i class="fas fa-graduation-cap"></i>
@@ -107,16 +109,17 @@
     </section>
   </main>
 
-  <!-- Footer -->
+  <!-- =========================
+       Footer
+  ========================= -->
   <footer class="footer">
     <div class="footer-container">
-      <!-- Company Info -->
+
       <div class="footer-col">
         <h3>Hivexstack Technology</h3>
         <p>We provide affordable and smart software solutions for Web, Mobile, Desktop, and Campus Assignments.</p>
       </div>
 
-      <!-- Services Links -->
       <div class="footer-col">
         <h3>Services</h3>
         <ul>
@@ -127,7 +130,6 @@
         </ul>
       </div>
 
-      <!-- Quick Links -->
       <div class="footer-col">
         <h3>Quick Links</h3>
         <ul>
@@ -138,13 +140,13 @@
         </ul>
       </div>
 
-      <!-- Contact Info -->
       <div class="footer-col">
         <h3>Contact</h3>
         <p>Email: hivexstacktechnology@gmail.com</p>
         <p>Phone: +94 77 028 0529</p>
         <p>Address: Colombo, Sri Lanka (Remote Work)</p>
       </div>
+
     </div>
 
     <div class="footer-bottom">
@@ -152,7 +154,10 @@
     </div>
   </footer>
 
+  <!-- =========================
+       JavaScript
+  ========================= -->
   <script src="home.js"></script>
-</body>
 
+</body>
 </html>
