--- a/home.html
+++ b/home.html
@@ -2,12 +2,40 @@
 <html lang="en">
 
 <head>
+  <!-- =========================
+         BASIC META
+    ========================= -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hivexstack Technology</title>
 
-  <!-- Main CSS -->
+  <!-- =========================
+         SEO META
+    ========================= -->
+  <title>HivexStack | Web & Software Development Company in Sri Lanka</title>
+
+  <meta name="description"
+    content="HivexStack is a Sri Lankan software company providing web development, mobile apps, desktop software, SEO services, and university coding projects.">
+
+  <meta name="keywords"
+    content="web development sri lanka, software company sri lanka, university coding projects, mobile app development sri lanka, SEO services sri lanka">
+
+  <meta name="author" content="HivexStack Technology">
+
+  <!-- =========================
+         OPEN GRAPH (SOCIAL SEO)
+    ========================= -->
+  <meta property="og:title" content="HivexStack | Web & Software Development Sri Lanka">
+  <meta property="og:description"
+    content="We build Web, Mobile & Desktop software solutions for businesses and university students in Sri Lanka.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://hivexstack.netlify.app/">
+  <meta property="og:image" content="https://hivexstack.netlify.app/assets/logo-outline.png">
+
+  <!-- =========================
+         CSS & ICONS
+    ========================= -->
   <link rel="stylesheet" href="home.css">
+  <link rel="icon" href="assets/titellogo.png">
 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -54,7 +82,7 @@
   ========================= -->
   <section class="hero">
     <div class="hero-content">
-      <h1>Empowering Your Business with Exceptional Software Solutions</h1>
+      <h1>Web & Software Development Company in Sri Lanka</h1>
       <p>Work with our skilled professionals to create software solutions that drive your business forward.</p>
 
       <!-- Call-to-Action Buttons -->
@@ -65,7 +93,7 @@
     </div>
 
     <div class="hero-overlay">
-      <img src="./assets/homebackground1.jpg" alt="Hero Image">
+      <img src="./assets/homebackground1.jpg" alt="Web and Software Development Services in Sri Lanka">
     </div>
   </section>
 
@@ -77,36 +105,36 @@
 
       <div class="card">
         <i class="fas fa-code"></i>
-        <h3>Web</h3>
-        <p>Modern, fast, and <strong>responsive websites</strong> designed to grow your business.</p>
+        <h2>Web Development</h2>
+        <p>Modern, fast, and responsive websites designed to grow your business.</p>
       </div>
 
       <div class="card">
         <i class="fas fa-mobile-alt"></i>
-        <h3>Mobile</h3>
-        <p>Apps for Android and iOS with smooth design and performance.</p>
+        <h2>Mobile App Development</h2>
+        <p>Android and iOS applications with smooth UI and performance.</p>
       </div>
 
       <div class="card">
         <i class="fas fa-desktop"></i>
-        <h3>Desktop</h3>
-        <p>Custom desktop apps for Windows & Mac tailored to your needs.</p>
+        <h2>Desktop Software Development</h2>
+        <p>Custom desktop applications for Windows and macOS.</p>
       </div>
 
       <div class="card" itemscope itemtype="https://schema.org/Service">
         <i class="fas fa-chart-line"></i>
-        <h3 itemprop="name">SEO Services</h3>
-        <p itemprop="description">Improve your website ranking on Google with professional SEO strategies.</p>
-        <meta itemprop="serviceType" content="SEO Optimization">
+        <h2 itemprop="name">SEO Services</h2>
+        <p itemprop="description">Professional SEO strategies to rank your website on Google.</p>
       </div>
 
       <div class="card">
         <i class="fas fa-graduation-cap"></i>
-        <h3>Campus Assignments</h3>
-        <p>Affordable solutions for special campus assignments.</p>
+        <h2>University Coding Projects</h2>
+        <p>Affordable and high-quality coding solutions for university students.</p>
       </div>
 
     </section>
+
   </main>
 
   <!-- =========================
@@ -160,4 +188,5 @@
   <script src="home.js"></script>
 
 </body>
+
 </html>
