--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
   <meta name="author" content="HivexStack Technology">
 
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="u_aBGBGsLurlXE7RlI7hgc3Keo5NBnqJujqzaUQ_eWw">
+
+
   <!-- =========================
          OPEN GRAPH (SOCIAL SEO)
     ========================= -->
@@ -69,7 +73,7 @@
 
       <!-- Navigation Links -->
       <ul class="nav-list">
-        <li><a href="home.html" class="nav-link">Home</a></li>
+        <li><a href="index.html" class="nav-link">Home</a></li>
         <li><a href="./about/about.html" class="nav-link">About</a></li>
         <li><a href="./services/service.html" class="nav-link">Services</a></li>
         <li><a href="./contact/contact.html" class="nav-link">Contact</a></li>
@@ -96,6 +100,24 @@
       <img src="./assets/homebackground1.jpg" alt="Web and Software Development Services in Sri Lanka">
     </div>
   </section>
+
+
+  <!-- =========================
+     Limited Offer Card
+========================= -->
+  <div class="offer-overlay" id="offerOverlay">
+    <div class="offer-card">
+      <span class="offer-close" id="offerClose">&times;</span>
+      <h2><i class="fas fa-tags offer-icon"></i> Limited Time Offer</h2>
+      <p>Get <strong style="color: rgb(6, 156, 6);  font-weight: bold;">30% OFF</strong> on Web Development Services</p>
+      <p class="offer-valid">Valid till this month only</p>
+      <a href="./contact/contact.html" class="offer-btn">
+        <i class="fas fa-gift"></i> Get Offer
+      </a>
+
+    </div>
+  </div>
+
 
   <!-- =========================
        Services Section
@@ -161,7 +183,7 @@
       <div class="footer-col">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="./about/about.html">About Us</a></li>
           <li><a href="./services/service.html">Services</a></li>
           <li><a href="./contact/contact.html">Contact</a></li>
