--- a/services/service.html
+++ b/services/service.html
@@ -30,7 +30,7 @@
       <!-- Close Button -->
       <div class="close-btn" id="closeBtn"><i class="fas fa-times"></i></div>
       <ul class="nav-list">
-        <li><a href="/home.html" class="nav-link">Home</a></li>
+        <li><a href="../index.html" class="nav-link">Home</a></li>
         <li><a href="../about/about.html" class="nav-link">About</a></li>
         <li><a href="../services/service.html" class="nav-link">Services</a></li>
         <li><a href="../contact/contact.html" class="nav-link">Contact</a></li>
@@ -179,7 +179,7 @@
       <div class="footer-col">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="/home.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="/about/about.html">About Us</a></li>
           <li><a href="/services/service.html">Services</a></li>
           <li><a href="/contact/contact.html">Contact</a></li>
