--- a/about/about.html
+++ b/about/about.html
@@ -30,7 +30,7 @@
     <nav class="nav-box" id="navBox">
       <div class="close-btn" id="closeBtn"><i class="fas fa-times"></i></div>
       <ul class="nav-list">
-        <li><a href="../home.html" class="nav-link">Home</a></li>
+        <li><a href="../index.html" class="nav-link">Home</a></li>
         <li><a href="./about.html" class="nav-link active">About</a></li>
         <li><a href="../services/service.html" class="nav-link">Services</a></li>
         <li><a href="../contact/contact.html" class="nav-link">Contact</a></li>
@@ -142,7 +142,7 @@
       <div class="footer-col">
         <h3>Quick Links</h3>
         <ul>
-          <li><a href="../home.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="./about.html">About Us</a></li>
           <li><a href="../services/service.html">Services</a></li>
           <li><a href="../contact/contact.html">Contact</a></li>
