--- a/contact/contact.html
+++ b/contact/contact.html
@@ -36,7 +36,7 @@
       <!-- Close Button -->
       <div class="close-btn" id="closeBtn"><i class="fas fa-times"></i></div>
       <ul class="nav-list">
-        <li><a href="../home.html" class="nav-link">Home</a></li>
+        <li><a href="../index.html" class="nav-link">Home</a></li>
         <li><a href="../about/about.html" class="nav-link">About</a></li>
         <li><a href="../services/service.html" class="nav-link">Services</a></li>
         <li><a href="../contact/contact.html" class="nav-link">Contact</a></li>
