Update HiveX Recorder UI and pages

--- a/about/about.html
+++ b/about/about.html
@@ -14,7 +14,12 @@
   <!-- =========================
        Snowfall for Christmas Theme
   ========================= -->
-  <div id="snow"></div>
+  <!-- <div id="snow"></div> -->
+
+
+
+
+  
 
   <!-- Navbar -->
   <header class="nav">
@@ -96,12 +101,14 @@
           <img src="../assets/dananjaya.jpg" alt="Dananjaya Sandaruwan">
           <h3>Dananjaya Sandaruwan</h3>
           <p>Full Stack Developer</p>
+
           <div class="team-socials">
             <a href="https://github.com/danaruwan0" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://linkedin.com/in/username" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://x.com/username" target="_blank"><i class="fab fa-x-twitter"></i></a>
-            <a href="https://glittering-pegasus-196b40.netlify.app/" target="_blank"><i class="fas fa-globe"></i></a>
+            <a href="https://linkedin.com/in/dananjaya-sandaruwan-0bb919310" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://x.com/dananjayaruwan0" target="_blank"><i class="fab fa-x-twitter"></i></a>
+            <a href="https://dananjayasandaruwan.netlify.app/" target="_blank"><i class="fas fa-globe"></i></a>
           </div>
+
         </div>
 
         <!-- Developer 2 -->
