--- a/contact/contact.html
+++ b/contact/contact.html
@@ -19,7 +19,10 @@
   <!-- =========================
        Snowfall for Christmas Theme
   ========================= -->
-  <div id="snow"></div>
+  <!-- <div id="snow"></div> -->
+
+
+  
 
   <!-- Navbar -->
   <header class="nav">
