--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- =========================
        Snowfall for Christmas Theme
   ========================= -->
-  <div id="snow"></div>
+  <!-- <div id="snow"></div> -->
 
   <!-- =========================
        Navbar
@@ -105,7 +105,7 @@
   <!-- =========================
      Limited Offer Card
 ========================= -->
-  <div class="offer-overlay" id="offerOverlay">
+  <!-- <div class="offer-overlay" id="offerOverlay">
     <div class="offer-card">
       <span class="offer-close" id="offerClose">&times;</span>
       <h2><i class="fas fa-tags offer-icon"></i> Limited Time Offer</h2>
@@ -116,7 +116,7 @@
       </a>
 
     </div>
-  </div>
+  </div> -->
 
 
   <!-- =========================
