--- a/services/service.html
+++ b/services/service.html
@@ -14,7 +14,12 @@
   <!-- =========================
        Snowfall for Christmas Theme
   ========================= -->
-  <div id="snow"></div>
+  <!-- <div id="snow"></div> -->
+
+
+
+
+  
   <!-- Navbar -->
   <header class="nav">
     <div class="nav-logo">
